frontend/test/should_pass/minmax.grg
using attrib_model_001;

rule r {
	nby : NBYTE;
	nsh : NSHORT;
	ni : NINT;
	nl : NLONG;
	nf : NFLOAT;
	nd : NDOUBLE;
	-eby:EBYTE->;
	-esh:ESHORT->;
	-ei:EINT->;
	-el:ELONG->;
	-ef:EFLOAT->;
	-ed:EDOUBLE->;

	if {
		nby.a == (byte)Math::min(eby.a, nby.a);
		nsh.a == (short)Math::min(esh.a, nsh.a);
		ni.a == Math::min(ei.a, ni.a);
		nl.a == Math::min(el.a, nl.a);
		nf.a == Math::min(ef.a, nf.a);
		nd.a == Math::min(ed.a, nd.a);

		nby.a == (byte)Math::max(eby.a, nby.a);
		nsh.a == (short)Math::max(esh.a, nsh.a);
		ni.a == Math::max(ei.a, ni.a);
		nl.a == Math::max(el.a, nl.a);
		nf.a == Math::max(ef.a, nf.a);
		nd.a == Math::max(ed.a, nd.a);
	}

	modify {
		eval {
			nby.a = (byte)Math::min(eby.a, nby.a);
			nsh.a = (short)Math::min(esh.a, nsh.a);
			ni.a = Math::min(ei.a, ni.a);
			nl.a = Math::min(el.a, nl.a);
			nf.a = Math::min(ef.a, nf.a);
			nd.a = Math::min(ed.a, nd.a);

			nby.a = (byte)Math::max(eby.a, nby.a);
			nsh.a = (short)Math::max(esh.a, nsh.a);
			ni.a = Math::max(ei.a, ni.a);
			nl.a = Math::max(el.a, nl.a);
			nf.a = Math::max(ef.a, nf.a);
			nd.a = Math::max(ed.a, nd.a);
		}
	}
}

