frontend/test/should_fail/minmax_001.grg
using attrib_model_001;

rule r {
	nb : NBOOL;
	-eb:EBOOL->;

	if {
		nb.a == Math::min(nb.a, eb.a);
		nb.a == Math::max(nb.a, eb.a);
	}

	modify {
	}
}

